testament/tests/shouldfail/tmsg.nim
discard """
msg: "Hello World"
"""

static:
  echo "something else"
